--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
   <body>
 
     <div class="header">
-    <a href="index.html"><h1>Your Name</h1></a>
+    <a href="index.html"><h1>Nick Melendez</h1></a>
     <ul>
     <li><h3><a href="portfolio.html">Portfolio</a></h3></li>
     <li><h3><a href="statement.html">Artist Statement</a></h3></li>
