--- a/statement.html
+++ b/statement.html
@@ -9,13 +9,8 @@
 
 <body>
   <h1>Artist Statement</h1>
-  <p>Lorem ipsum dolor sit amet, <em>consectetur adipiscing elit</em>. Sed quis purus dolor. <strong>Maecenas sit amet</strong> turpis sodales, iaculis risus sed, venenatis massa. Nullam tempor vulputate porta. Sed ultricies turpis id justo condimentum, sit amet aliquam odio varius.
-    Vivamus venenatis tincidunt velit, ut feugiat nisi sollicitudin eget. Vivamus libero elit, dapibus at egestas at, mollis pulvinar erat. Maecenas non purus arcu. Nullam vehicula feugiat arcu in faucibus. Nulla id blandit neque. Curabitur tempor tortor
-    ex. Pellentesque et rutrum arcu, ut euismod urna. Vivamus sed ligula neque.</p>
-  <p>Ut suscipit nibh at magna tincidunt, et facilisis eros auctor. Integer cursus, eros sit amet ultricies eleifend, tortor massa tincidunt ante, quis ultricies mi nibh et enim. Nam quis risus elit. Morbi eget tortor molestie, rutrum nulla quis, mollis
-    ligula. Sed ac blandit lacus. In porta id justo sed condimentum. Vivamus vitae ultricies neque, quis dapibus justo. Sed eget tempor libero. Quisque et libero ut odio interdum convallis quis et quam. Nulla eget est hendrerit, interdum felis quis, lobortis
-    nibh. Fusce viverra leo eu massa pretium feugiat. Donec scelerisque justo sapien, at aliquet urna pellentesque ac. Aenean ut aliquet dolor. Morbi egestas ornare odio eu aliquet. Cras vel orci eros. Integer quis dui id augue convallis gravida ac vel
-    sapien.
+  <p>The work in this portfolio is meant to give insight in to my life and the ways that I have approached creating art that acts as therapy or meditation on past experiences.These works create a body where each member gives a different point of view for something that has a simple intention. </p>
+  <p>Each part of the body is open to interpretation by the viewer. And in the same way the work is meant to create an emotional or empathic connection between the viewer and my experiences. It is my belief that this can create a healing effect for many people who have lived through abuse, suppression, and emotional disconnection from other people.
   </p>
 </body>
 
