--- a/portfolio.html
+++ b/portfolio.html
@@ -24,12 +24,12 @@
   </div>
 
   <div class="portfolio-item">
-    <div class="embed-container"><iframe src="https://www.youtube.com/watch?v=GCK-hfLhC8Q&t=49s" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+    <div class="embed-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/GCK-hfLhC8Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
     <h3>Project 1, Digital Video, SP 2019</h3>
     <p>This video symbolizes the passage of external information through the eyes. The information that is being passed in this work is left up to interpretation by the viewer who is watching the sitter take in the light and react emotionally.</p>
   </div>
   <div class="portfolio-item">
-    <div class="embed-container"><iframe src="https://www.youtube.com/watch?v=8CVNo61NUoE" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+    <div class="embed-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/8CVNo61NUoE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
     <h3>Project 2, Digital Video, SP 2019</h3>
     <p>This video symbolizes the passage of external information through the eyes, and the movement of perceived information from within. The information that is being passed in this work is left up to interpretation by the viewer who is watching the
       sitter take in the light and react emotionally. The perceived information coming from the left eye may represent intention from the "sitter", but it is left up to the viewers interpretation.</p>
@@ -40,7 +40,7 @@
     <p>Project 3 was created to bring the viewer in to an emotiona lconnection with the men who were apart of the original Bracero Program and the hardships that they endured. Today the are still programs like the original but with fewer dehumanizing factors.</p>
   </div>
   <div class="portfolio-item">
-    <div class="embed-container"><iframe src="https://www.youtube.com/watch?v=9p2ksYcdQ74" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+    <div class="embed-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/9p2ksYcdQ74" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
     <h3>Project 4, Digital Video, SP 2019</h3>
     <p>This video represents some of the family issues that I dealt with growing up, and I made this work to crystalize my fathers first year of sobriety. The video is narrated by younger self and the negative emotional quality that I used to have.</p>
   </div>
