--- a/art74/index.html
+++ b/art74/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>what's my name?</h1>
-    <a href="page2">nick</a>
+    <a href="page2.html">nick</a>
   </body>
 </html>
