--- a/art74/page3.html
+++ b/art74/page3.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
-    <h1>ok.</h1>
-    <a href="page4.html">k</a>
+    <h1>ok</h1>
+    <a href="page4.html">wait, im not sure</a>
   </body>
 </html>
