--- a/art74/page5.html
+++ b/art74/page5.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
-    <h1>cool, were friends now.</h1>
-    <a href="page4.html">nah thats ok.</a>
+    <h1>its nick.</h1>
+    <a href="index.html">nah you look like a john.</a>
   </body>
 </html>
