--- a/art74/page4.html
+++ b/art74/page4.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
-    <h1>ok</h1>
-    <a href="index.html">ok</a>
+    <h1>ok, bye</h1>
+    <a href="index.html">ok.</a>
   </body>
 </html>
