--- a/art74/page6.html
+++ b/art74/page6.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
-    <h1>its nick.</h1>
-    <a href="page6.html">nah you look like a john.</a>
+    <h1>but im nick?.</h1>
+    <a href="index.html">ok bye.</a>
   </body>
 </html>
