--- a/netart/index.html
+++ b/netart/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>(Nick Melendez Art74)</title>
+    <title>(Nick Melendez)</title>
   <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
-    <h1>what's my name?</h1>
-    <a href="page3.html">nick</a>
-      <a href="page5.html">idk?</a>
+    <h1>Hello -- This is my website!</h1>
+    <p>I'm making this as a meditative experience, read my <a href="statement.html">artist's statement.</a></p>
+    <a href="portfolio.html">portfolio</a>
   </body>
 </html>
