--- a/art74/page6.html
+++ b/art74/page6.html
@@ -6,8 +6,7 @@
   <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
-    <h1>wanna be friends now?</h1>
-    <a href="page4.html">nah.</a>
-      <a href="page5.html">walk away.</a>
+    <h1>makes sense.</h1>
+    <a href="index.html">......</a>
   </body>
 </html>
