--- a/melendeznickportfolio/index.html
+++ b/melendeznickportfolio/index.html
@@ -20,7 +20,7 @@
 <body>
   <div class="container-fluid">
 <h1>This is a Heading</h1>
-<img src="glitchcolor.jpg" class="rounded" alt="Glitch Color">
+<img src="landingpage.png" class="rounded img-fluid" alt="Glitch Color">
 <p>This is a paragraph.</p>
 </div>
 </body>
