--- a/melendeznickportfolio/index.html
+++ b/melendeznickportfolio/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Nick Melendez Portfolio</title>
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
@@ -19,9 +19,32 @@
 </head>
 <body>
   <div class="container-fluid">
-<h1>This is a Heading</h1>
+
+    <ul class="nav">
+      <li class="nav-item">
+        <a class="nav-link" href="index.html">Home</a>
+      </li>
+    <li class="nav-item">
+      <a class="nav-link" href="glitch.html">Glitch</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="mememashup.html">meme mashup</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="minecraft.html">Minecraft</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled" href="netart.html">Net-Art</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="sculpture.html">Sculpture</a>
+    </li>
+  </ul>
+
+
+
+<h1>Come back here for a nap. </h1>
 <img src="landingpage.png" class="rounded img-fluid" alt="Glitch Color">
-<p>This is a paragraph.</p>
 </div>
 </body>
 </html>
