--- a/melendeznickportfolio/netart.html
+++ b/melendeznickportfolio/netart.html
@@ -34,7 +34,7 @@
       <a class="nav-link" href="minecraft.html">Minecraft</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link disabled" href="netart.html">Net Art</a>
+      <a class="nav-link disabled" href="netart.html">Net-Art</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="sculpture.html">Sculpture</a>
@@ -43,7 +43,7 @@
 
 
 
-<h1>net stuff</h1>
+<h1></h1>
 <img src="landingpage.png" class="rounded img-fluid" alt="Glitch Color">
 </div>
 </body>
