--- a/melendeznickportfolio/mememashup.html
+++ b/melendeznickportfolio/mememashup.html
@@ -35,7 +35,7 @@
       <a class="nav-link" href="minecraft.html">Minecraft</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link disabled" href="netart.html">Net-Art</a>
+      <a class="nav-link" href="netart.html">Net-Art</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="sculpture.html">Sculpture</a>
