updated pages and image link for netart

--- a/74dw/melendeznickportfolio/index.html
+++ b/74dw/melendeznickportfolio/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Net Art</title>
+<title>Nick Melendez Portfolio</title>
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
@@ -43,10 +43,8 @@
 
 
 
-<h1>wanna see this site? click the picture. </h1>
-<a href="melendeznick.github.io/art74/index.html">
-	<img src="netartscreenshot.png" class="rounded img-fluid" alt="screenshot">
-	</a>
+<h1>Come back here for a nap. </h1>
+<img src="landingpage.png" class="rounded img-fluid" alt="Glitch Color">
 </div>
 </body>
 </html>
