--- a/melendeznickportfolio/netart.html
+++ b/melendeznickportfolio/netart.html
@@ -44,7 +44,7 @@
 
 
 <h1>wanna see this site? click the picture. </h1>
-<a href="melendeznick.github.io/art74/index.html">
+<a href="https://melendeznick.github.io/art74/index.html">
 	<img src="netartscreenshot.png" class="rounded img-fluid" alt="screenshot">
 	</a>
 </div>
