--- a/melendeznickportfolio/glitch.html
+++ b/melendeznickportfolio/glitch.html
@@ -43,7 +43,8 @@
 
 
 
-<h1>She didn't want to be glitched.</h1>
+<h1>Glitch</h1>
+<p> This is a photograph I took then glitched. I enjoy this photo as the glitches take away from the commercial aspect of the original piece. </p>
 <img src="glitchcolor.jpg" class="rounded img-fluid" alt="Glitch Color">
 </div>
 </body>
