--- a/melendeznickportfolio/mememashup.html
+++ b/melendeznickportfolio/mememashup.html
@@ -45,6 +45,7 @@
 
 
 <h1>I mashed up memes.</h1>
+<p> For those of you who don't know, Jar Jar Binks is the true Lord of the Sith. </p>
 <img src="mememashup.png" class="rounded img-fluid" alt="Glitch Color">
 </div>
 </body>
