--- a/melendeznickportfolio/glitch.html
+++ b/melendeznickportfolio/glitch.html
@@ -28,7 +28,7 @@
       <a class="nav-link" href="glitch.html">Glitch</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="mememashup.html">meme mashup</a>
+      <a class="nav-link" href="mememashup.html">Meme Mashup</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="minecraft.html">Minecraft</a>
