--- a/melendeznickportfolio/nav.html
+++ b/melendeznickportfolio/nav.html
@@ -5,4 +5,5 @@
   <li><a href="minecraft.html">minecraft</a></li>
   <li><a href="netart.html">netart</a></li>
   <li><a href="sculpture.html">sculpture</a></li>
+  <li><a href="finalglitch.html">Fishing</a></li>
 </ul>
