--- a/melendeznickportfolio/finalglitch.html
+++ b/melendeznickportfolio/finalglitch.html
@@ -39,6 +39,9 @@
     <li class="nav-item">
       <a class="nav-link" href="sculpture.html">Sculpture</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" href="finalglitch.html">Fishing</a>
+    </li>
   </ul>
 
 
