--- a/melendeznickportfolio/mememashup.html
+++ b/melendeznickportfolio/mememashup.html
@@ -40,6 +40,9 @@
     <li class="nav-item">
       <a class="nav-link" href="sculpture.html">Sculpture</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" href="finalglitch.html">Fishing</a>
+    </li>
   </ul>
 
 
