--- a/melendeznickportfolio/finalglitch.html
+++ b/melendeznickportfolio/finalglitch.html
@@ -48,8 +48,12 @@
 
 <h1>Glitch</h1>
 <p> These are images that I made then glitched for my final project.</p>
-<img src="glitchcolor.jpg" class="rounded img-fluid" alt="Glitch Color">
+<img src="glitch2.jpg" class="rounded img-fluid" alt="Glitch 2">
 <img src="glitch1.jpg" class="rounded img-fluid" alt="glitch 1">
+<img src="glitch3.jpg" class="rounded img-fluid" alt="glitch 3">
+<img src="glitch4.jpg" class="rounded img-fluid" alt="glitch 4">
+<img src="glitch5.jpg" class="rounded img-fluid" alt="glitch 5">
+<img src="glitch6.jpg" class="rounded img-fluid" alt="glitch 6">
 </div>
 </body>
 </html>
