--- a/melendeznickportfolio/finalglitch.html
+++ b/melendeznickportfolio/finalglitch.html
@@ -47,7 +47,7 @@
 
 
 <h1>Glitch</h1>
-<p> These are images that I made then glitched for my final project.</p>
+<p> These are images that I made then glitched for my final project. Fishing is great, but the people I get to fish with are better.</p>
 <img src="glitch2.jpg" class="rounded img-fluid" alt="Glitch 2">
 <img src="glitch1.jpg" class="rounded img-fluid" alt="glitch 1">
 <img src="glitch3.jpg" class="rounded img-fluid" alt="glitch 3">
